home section Done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,58 @@
 </head>
 
 <body>
+    <section id="hero">
+        <main class="h-main">
+            <div id="left">
+                <h1 id="h-text">Let's make beautiful flowers a part of your life.</h1>
+                <p id="h-pra">It is a long established fact that a reader will be distracted by the readable content of
+                    a page when
+                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.</p>
+                <button class="btn">Shop Now</button>
+            </div>
+            <div class="h-right">
+                <div class="h-right">
 
+                    <img id="h-img" src="/Flower Asset/pngwing 10.png" alt="" srcset="">
+                </div>
+            </div>
+        </main>
+    </section>
+    <section>
+
+        <main class="f-main">
+            <div class="f-header">
+                <h1>Our Featured Flowers</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout.</p>
+            </div>
+            <div class="flowers">
+                <div class="f">
+
+                    <div id="f1" class="flowr">
+                        <img src="/Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <h1>Pink Flower Tree</h1>
+                </div>
+                <div class="f">
+
+                    <div id="f2" class="flowr">
+                        <img src="/Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <h1>Pink Flower Tree</h1>
+                </div>
+                <div class="f">
+
+                    <div id="f3" class="flowr">
+                        <img src="/Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                    <h1>Pink Flower Tree</h1>
+                </div>
+            </div>
+        </main>
+
+    </section>
 </body>
 
 </html>
