--- a/index.html
+++ b/index.html
@@ -62,6 +62,75 @@
         </main>
 
     </section>
+    <section id="ssection">
+        <main class="d-servic">
+            <div class="s-item">
+                <img src="/Flower Asset/Group 57.png" alt="" srcset="">
+                <h1>Same Day Delivery.</h1>
+            </div>
+            <div class="s-item">
+                <img src="/Flower Asset/Group 58.png" alt="" srcset="">
+                <h1>Fresh Flowers. Local Growers.</h1>
+            </div>
+            <div class="s-item">
+                <img src="/Flower Asset/Group 59.png" alt="" srcset="">
+                <h1>24/7 Free Support.</h1>
+            </div>
+        </main>
+    </section>
+    <section>
+        <div class="discount">
+            <div class="left">
+                <h1>Hot Deal! Sale Up To 25% <span>Off</span> </h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+                <button class="btn">Sing Up</button>
+            </div>
+            <div class="right">
+                <img src="/Flower Asset/pngwing 8.png" alt="" srcset="">
+            </div>
+        </div>
+    </section>
+    <section id="instaram">
+        <div id="i-head">
+            <h1>
+                Instagram</h1>
+            <p>
+                It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
+        </div>
+        <div class="imdiv">
+            <img src="/Flower Asset/Flower 01.png" alt="">
+            <img src="/Flower Asset/Rectangle 4.png" alt="">
+            <img src="/Flower Asset/Rectangle 5.png" alt="">
+            <img src="/Flower Asset/Rectangle 6.png" alt="">
+        </div>
+    </section>
+    <section id="ssub">
+        <div id="subscribe">
+            <h1>
+
+                Get The Latest Deals
+            </h1>
+            <p>
+
+                $30 coupon for first shopping
+            </p>
+            <div id="Email">
+                <input type="text" placeholder="Enter Your Email Here">
+                <button class="btn">subscribe</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div>
+            <h1><span>Flower</span>Paradise</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking
+                at its layout.</p>
+        </div>
+        <p class="p">2024, <a href="https://tanvir23.netlify.app" target="_blank">tntanvir</a>. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
